fix: dockerfile docker-composeのボリューム先の修正

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,11 +1,9 @@
 FROM ruby:3.1.2
-
 RUN apt-get update -qq && apt-get install -y vim
 
 WORKDIR /traderush
-
-COPY Gemfile /TradeRush/Gemfile
-COPY Gemfile.lock  /TradeRush/Gemfile.lock
+COPY Gemfile /myapp/Gemfile
+COPY Gemfile.lock /myapp/Gemfile.lock
 
 RUN gem update --system
 RUN bundle update --bundler
