--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,26 @@
 services:
   db:
-    image: mysql:8.0.30
+    image: mysql:8.0.32
     environment:
-      MYSQL_ROOT_PASSWORD: mysql_root_password
+      MYSQL_ROOT_PASSWORD: password
       MYSQL_DATABASE: mysql_database
       MYSQL_USER: mysql_user
-      MYSQL_PASSWORD: mysql_password
+      MYSQL_PASSWORD: password
     ports:
       - "3306:3306"
     volumes:
       - mysql_data:/var/lib/mysql
-
   rails:
-    build: 
+    build:
       context: ./backend
     command: bash -c "bundle exec rails s -b '0.0.0.0'"
-    volumes: 
+    volumes:
       - ./backend:/traderush
     ports:
-      - "3000:3000"
+      - 3000:3000
     depends_on:
       - db
     tty: true
     stdin_open: true
-
 volumes:
   mysql_data:
