fix: ボリュームをbackendへ変更

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,7 +1,7 @@
 FROM ruby:3.1.2
 RUN apt-get update -qq && apt-get install -y vim
 
-WORKDIR /traderush
+WORKDIR /backend
 COPY Gemfile /myapp/Gemfile
 COPY Gemfile.lock /myapp/Gemfile.lock
 
@@ -9,7 +9,7 @@ RUN gem update --system
 RUN bundle update --bundler
 
 RUN bundle install
-COPY . /traderush
+COPY . /backend
 
 COPY entrypoint.sh /usr/bin/
 RUN chmod +x /usr/bin/entrypoint.sh
