add: backecd/rails作成

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - "3306:3306"
     volumes:
       - mysql_data:/var/lib/mysql
-  rails:
+  backend:
     build:
       context: ./backend
     command: bash -c "bundle exec rails s -b '0.0.0.0'"
