--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -1,2 +1,23 @@
 source "https://rubygems.org"
-gem "rails", "~> 7.1.5"
+
+ruby "3.1.2"
+
+gem "rails", "~> 7.1.5", ">= 7.1.5.1"
+
+gem "mysql2", "~> 0.5"
+
+gem "puma", ">= 5.0"
+
+gem "tzinfo-data", platforms: %i[ windows jruby ]
+
+gem "bootsnap", require: false
+
+
+group :development, :test do
+  gem "debug", platforms: %i[ mri windows ]
+end
+
+group :development do
+  gem "error_highlight", ">= 0.4.0", platforms: [:ruby]
+end
+
