add: frontend Dockerfile docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,13 @@
 services:
+  frontend:
+    build:
+      dockerfile:  ./frontend/Dockerfile
+    tty: true
+    stdin_open: true
+    volumes:
+      - ./frontend:/app
+    ports:
+      - "3001:3001"
   backend:
     container_name: trade-rush-backend
     build:
